--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.17.3",
     "meteor-node-stubs": "^1.0.1",
     "vue": "^2.6.12",
     "vue-meteor-tracker": "^2.0.0-beta.5"
